testLanguageParser.cpp

// Generated from testLanguage.g4 by ANTLR 4.9.3


#include "testLanguageListener.h"

#include "testLanguageParser.h"


using namespace antlrcpp;
using namespace antlr4;

testLanguageParser::testLanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

testLanguageParser::~testLanguageParser() {
  delete _interpreter;
}

std::string testLanguageParser::getGrammarFileName() const {
  return "testLanguage.g4";
}

const std::vector<std::string>& testLanguageParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& testLanguageParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

testLanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<testLanguageParser::StatementContext *> testLanguageParser::ProgramContext::statement() {
  return getRuleContexts<testLanguageParser::StatementContext>();
}

testLanguageParser::StatementContext* testLanguageParser::ProgramContext::statement(size_t i) {
  return getRuleContext<testLanguageParser::StatementContext>(i);
}

std::vector<testLanguageParser::Defer_statementContext *> testLanguageParser::ProgramContext::defer_statement() {
  return getRuleContexts<testLanguageParser::Defer_statementContext>();
}

testLanguageParser::Defer_statementContext* testLanguageParser::ProgramContext::defer_statement(size_t i) {
  return getRuleContext<testLanguageParser::Defer_statementContext>(i);
}

std::vector<testLanguageParser::ScopeBlockContext *> testLanguageParser::ProgramContext::scopeBlock() {
  return getRuleContexts<testLanguageParser::ScopeBlockContext>();
}

testLanguageParser::ScopeBlockContext* testLanguageParser::ProgramContext::scopeBlock(size_t i) {
  return getRuleContext<testLanguageParser::ScopeBlockContext>(i);
}


size_t testLanguageParser::ProgramContext::getRuleIndex() const {
  return testLanguageParser::RuleProgram;
}

void testLanguageParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void testLanguageParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

testLanguageParser::ProgramContext* testLanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, testLanguageParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(49);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case testLanguageParser::T__0:
        case testLanguageParser::T__4:
        case testLanguageParser::T__8:
        case testLanguageParser::Func:
        case testLanguageParser::If:
        case testLanguageParser::For:
        case testLanguageParser::Minus:
        case testLanguageParser::Negation:
        case testLanguageParser::Type:
        case testLanguageParser::Id:
        case testLanguageParser::Integer:
        case testLanguageParser::Float: {
          setState(46);
          statement();
          break;
        }

        case testLanguageParser::Defer: {
          setState(47);
          defer_statement();
          break;
        }

        case testLanguageParser::T__9: {
          setState(48);
          scopeBlock();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(51); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << testLanguageParser::T__0)
      | (1ULL << testLanguageParser::T__4)
      | (1ULL << testLanguageParser::T__8)
      | (1ULL << testLanguageParser::T__9)
      | (1ULL << testLanguageParser::Defer)
      | (1ULL << testLanguageParser::Func)
      | (1ULL << testLanguageParser::If)
      | (1ULL << testLanguageParser::For)
      | (1ULL << testLanguageParser::Minus)
      | (1ULL << testLanguageParser::Negation)
      | (1ULL << testLanguageParser::Type)
      | (1ULL << testLanguageParser::Id)
      | (1ULL << testLanguageParser::Integer)
      | (1ULL << testLanguageParser::Float))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

testLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

testLanguageParser::ExpressionContext* testLanguageParser::StatementContext::expression() {
  return getRuleContext<testLanguageParser::ExpressionContext>(0);
}

testLanguageParser::DeclarationContext* testLanguageParser::StatementContext::declaration() {
  return getRuleContext<testLanguageParser::DeclarationContext>(0);
}

testLanguageParser::AssignmentContext* testLanguageParser::StatementContext::assignment() {
  return getRuleContext<testLanguageParser::AssignmentContext>(0);
}

testLanguageParser::ForStatementContext* testLanguageParser::StatementContext::forStatement() {
  return getRuleContext<testLanguageParser::ForStatementContext>(0);
}

testLanguageParser::IfStatementContext* testLanguageParser::StatementContext::ifStatement() {
  return getRuleContext<testLanguageParser::IfStatementContext>(0);
}


size_t testLanguageParser::StatementContext::getRuleIndex() const {
  return testLanguageParser::RuleStatement;
}

void testLanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void testLanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

testLanguageParser::StatementContext* testLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, testLanguageParser::RuleStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(54);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << testLanguageParser::T__4)
        | (1ULL << testLanguageParser::Minus)
        | (1ULL << testLanguageParser::Negation)
        | (1ULL << testLanguageParser::Type)
        | (1ULL << testLanguageParser::Id)
        | (1ULL << testLanguageParser::Integer)
        | (1ULL << testLanguageParser::Float))) != 0)) {
        setState(53);
        expression(0);
      }
      setState(56);
      match(testLanguageParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      declaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(58);
      assignment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(59);
      forStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(60);
      ifStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Defer_statementContext ------------------------------------------------------------------

testLanguageParser::Defer_statementContext::Defer_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Defer_statementContext::Defer() {
  return getToken(testLanguageParser::Defer, 0);
}

testLanguageParser::StatementContext* testLanguageParser::Defer_statementContext::statement() {
  return getRuleContext<testLanguageParser::StatementContext>(0);
}


size_t testLanguageParser::Defer_statementContext::getRuleIndex() const {
  return testLanguageParser::RuleDefer_statement;
}

void testLanguageParser::Defer_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefer_statement(this);
}

void testLanguageParser::Defer_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefer_statement(this);
}

testLanguageParser::Defer_statementContext* testLanguageParser::defer_statement() {
  Defer_statementContext *_localctx = _tracker.createInstance<Defer_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, testLanguageParser::RuleDefer_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(testLanguageParser::Defer);
    setState(64);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

testLanguageParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

testLanguageParser::Variable_typeContext* testLanguageParser::TypeContext::variable_type() {
  return getRuleContext<testLanguageParser::Variable_typeContext>(0);
}

testLanguageParser::Function_typeContext* testLanguageParser::TypeContext::function_type() {
  return getRuleContext<testLanguageParser::Function_typeContext>(0);
}


size_t testLanguageParser::TypeContext::getRuleIndex() const {
  return testLanguageParser::RuleType;
}

void testLanguageParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void testLanguageParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

testLanguageParser::TypeContext* testLanguageParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, testLanguageParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(66);
      variable_type();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      function_type();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Formal_parameterContext ------------------------------------------------------------------

testLanguageParser::Formal_parameterContext::Formal_parameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Formal_parameterContext::Id() {
  return getToken(testLanguageParser::Id, 0);
}

testLanguageParser::Variable_typeContext* testLanguageParser::Formal_parameterContext::variable_type() {
  return getRuleContext<testLanguageParser::Variable_typeContext>(0);
}

tree::TerminalNode* testLanguageParser::Formal_parameterContext::Var() {
  return getToken(testLanguageParser::Var, 0);
}

testLanguageParser::Function_typeContext* testLanguageParser::Formal_parameterContext::function_type() {
  return getRuleContext<testLanguageParser::Function_typeContext>(0);
}


size_t testLanguageParser::Formal_parameterContext::getRuleIndex() const {
  return testLanguageParser::RuleFormal_parameter;
}

void testLanguageParser::Formal_parameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFormal_parameter(this);
}

void testLanguageParser::Formal_parameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFormal_parameter(this);
}

testLanguageParser::Formal_parameterContext* testLanguageParser::formal_parameter() {
  Formal_parameterContext *_localctx = _tracker.createInstance<Formal_parameterContext>(_ctx, getState());
  enterRule(_localctx, 8, testLanguageParser::RuleFormal_parameter);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case testLanguageParser::Var:
      case testLanguageParser::Id: {
        enterOuterAlt(_localctx, 1);
        setState(71);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == testLanguageParser::Var) {
          setState(70);
          match(testLanguageParser::Var);
        }
        setState(73);
        match(testLanguageParser::Id);
        setState(74);
        variable_type();
        break;
      }

      case testLanguageParser::T__4:
      case testLanguageParser::Type: {
        enterOuterAlt(_localctx, 2);
        setState(75);
        function_type();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Formal_parameter_listContext ------------------------------------------------------------------

testLanguageParser::Formal_parameter_listContext::Formal_parameter_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<testLanguageParser::Formal_parameterContext *> testLanguageParser::Formal_parameter_listContext::formal_parameter() {
  return getRuleContexts<testLanguageParser::Formal_parameterContext>();
}

testLanguageParser::Formal_parameterContext* testLanguageParser::Formal_parameter_listContext::formal_parameter(size_t i) {
  return getRuleContext<testLanguageParser::Formal_parameterContext>(i);
}


size_t testLanguageParser::Formal_parameter_listContext::getRuleIndex() const {
  return testLanguageParser::RuleFormal_parameter_list;
}

void testLanguageParser::Formal_parameter_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFormal_parameter_list(this);
}

void testLanguageParser::Formal_parameter_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFormal_parameter_list(this);
}

testLanguageParser::Formal_parameter_listContext* testLanguageParser::formal_parameter_list() {
  Formal_parameter_listContext *_localctx = _tracker.createInstance<Formal_parameter_listContext>(_ctx, getState());
  enterRule(_localctx, 10, testLanguageParser::RuleFormal_parameter_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << testLanguageParser::T__4)
      | (1ULL << testLanguageParser::Var)
      | (1ULL << testLanguageParser::Type)
      | (1ULL << testLanguageParser::Id))) != 0)) {
      setState(78);
      formal_parameter();
    }
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == testLanguageParser::T__1) {
      setState(81);
      match(testLanguageParser::T__1);
      setState(82);
      formal_parameter();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_typeContext ------------------------------------------------------------------

testLanguageParser::Variable_typeContext::Variable_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Variable_typeContext::Type() {
  return getToken(testLanguageParser::Type, 0);
}

tree::TerminalNode* testLanguageParser::Variable_typeContext::Integer() {
  return getToken(testLanguageParser::Integer, 0);
}


size_t testLanguageParser::Variable_typeContext::getRuleIndex() const {
  return testLanguageParser::RuleVariable_type;
}

void testLanguageParser::Variable_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_type(this);
}

void testLanguageParser::Variable_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_type(this);
}

testLanguageParser::Variable_typeContext* testLanguageParser::variable_type() {
  Variable_typeContext *_localctx = _tracker.createInstance<Variable_typeContext>(_ctx, getState());
  enterRule(_localctx, 12, testLanguageParser::RuleVariable_type);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(testLanguageParser::Type);
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == testLanguageParser::T__2) {
      setState(89);
      match(testLanguageParser::T__2);
      setState(90);
      match(testLanguageParser::Integer);
      setState(91);
      match(testLanguageParser::T__3);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_typeContext ------------------------------------------------------------------

testLanguageParser::Function_typeContext::Function_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<testLanguageParser::Formal_parameter_listContext *> testLanguageParser::Function_typeContext::formal_parameter_list() {
  return getRuleContexts<testLanguageParser::Formal_parameter_listContext>();
}

testLanguageParser::Formal_parameter_listContext* testLanguageParser::Function_typeContext::formal_parameter_list(size_t i) {
  return getRuleContext<testLanguageParser::Formal_parameter_listContext>(i);
}

tree::TerminalNode* testLanguageParser::Function_typeContext::Type() {
  return getToken(testLanguageParser::Type, 0);
}


size_t testLanguageParser::Function_typeContext::getRuleIndex() const {
  return testLanguageParser::RuleFunction_type;
}

void testLanguageParser::Function_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_type(this);
}

void testLanguageParser::Function_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_type(this);
}

testLanguageParser::Function_typeContext* testLanguageParser::function_type() {
  Function_typeContext *_localctx = _tracker.createInstance<Function_typeContext>(_ctx, getState());
  enterRule(_localctx, 14, testLanguageParser::RuleFunction_type);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case testLanguageParser::T__4: {
        enterOuterAlt(_localctx, 1);
        setState(94);
        match(testLanguageParser::T__4);
        setState(95);
        formal_parameter_list();
        setState(96);
        match(testLanguageParser::T__5);
        setState(97);
        match(testLanguageParser::T__6);
        setState(98);
        match(testLanguageParser::T__4);
        setState(99);
        formal_parameter_list();
        setState(100);
        match(testLanguageParser::T__5);
        break;
      }

      case testLanguageParser::Type: {
        enterOuterAlt(_localctx, 2);
        setState(102);
        match(testLanguageParser::Type);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Id_declarationContext ------------------------------------------------------------------

testLanguageParser::Id_declarationContext::Id_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> testLanguageParser::Id_declarationContext::Id() {
  return getTokens(testLanguageParser::Id);
}

tree::TerminalNode* testLanguageParser::Id_declarationContext::Id(size_t i) {
  return getToken(testLanguageParser::Id, i);
}

testLanguageParser::Variable_typeContext* testLanguageParser::Id_declarationContext::variable_type() {
  return getRuleContext<testLanguageParser::Variable_typeContext>(0);
}

std::vector<testLanguageParser::ExpressionContext *> testLanguageParser::Id_declarationContext::expression() {
  return getRuleContexts<testLanguageParser::ExpressionContext>();
}

testLanguageParser::ExpressionContext* testLanguageParser::Id_declarationContext::expression(size_t i) {
  return getRuleContext<testLanguageParser::ExpressionContext>(i);
}


size_t testLanguageParser::Id_declarationContext::getRuleIndex() const {
  return testLanguageParser::RuleId_declaration;
}

void testLanguageParser::Id_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId_declaration(this);
}

void testLanguageParser::Id_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId_declaration(this);
}

testLanguageParser::Id_declarationContext* testLanguageParser::id_declaration() {
  Id_declarationContext *_localctx = _tracker.createInstance<Id_declarationContext>(_ctx, getState());
  enterRule(_localctx, 16, testLanguageParser::RuleId_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(testLanguageParser::Id);
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == testLanguageParser::T__1) {
      setState(106);
      match(testLanguageParser::T__1);
      setState(107);
      match(testLanguageParser::Id);
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(113);
    variable_type();
    setState(123);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == testLanguageParser::T__7) {
      setState(114);
      match(testLanguageParser::T__7);
      setState(115);
      expression(0);
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == testLanguageParser::T__1) {
        setState(116);
        match(testLanguageParser::T__1);
        setState(117);
        expression(0);
        setState(122);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(125);
    match(testLanguageParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_declarationContext ------------------------------------------------------------------

testLanguageParser::Function_declarationContext::Function_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Function_declarationContext::Func() {
  return getToken(testLanguageParser::Func, 0);
}

tree::TerminalNode* testLanguageParser::Function_declarationContext::Id() {
  return getToken(testLanguageParser::Id, 0);
}

testLanguageParser::Function_typeContext* testLanguageParser::Function_declarationContext::function_type() {
  return getRuleContext<testLanguageParser::Function_typeContext>(0);
}

testLanguageParser::ScopeBlockContext* testLanguageParser::Function_declarationContext::scopeBlock() {
  return getRuleContext<testLanguageParser::ScopeBlockContext>(0);
}


size_t testLanguageParser::Function_declarationContext::getRuleIndex() const {
  return testLanguageParser::RuleFunction_declaration;
}

void testLanguageParser::Function_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_declaration(this);
}

void testLanguageParser::Function_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_declaration(this);
}

testLanguageParser::Function_declarationContext* testLanguageParser::function_declaration() {
  Function_declarationContext *_localctx = _tracker.createInstance<Function_declarationContext>(_ctx, getState());
  enterRule(_localctx, 18, testLanguageParser::RuleFunction_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(testLanguageParser::Func);
    setState(128);
    match(testLanguageParser::Id);
    setState(129);
    function_type();
    setState(130);
    scopeBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_type_declarationContext ------------------------------------------------------------------

testLanguageParser::Variable_type_declarationContext::Variable_type_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Variable_type_declarationContext::Type() {
  return getToken(testLanguageParser::Type, 0);
}

std::vector<testLanguageParser::Variable_typeContext *> testLanguageParser::Variable_type_declarationContext::variable_type() {
  return getRuleContexts<testLanguageParser::Variable_typeContext>();
}

testLanguageParser::Variable_typeContext* testLanguageParser::Variable_type_declarationContext::variable_type(size_t i) {
  return getRuleContext<testLanguageParser::Variable_typeContext>(i);
}

std::vector<tree::TerminalNode *> testLanguageParser::Variable_type_declarationContext::Id() {
  return getTokens(testLanguageParser::Id);
}

tree::TerminalNode* testLanguageParser::Variable_type_declarationContext::Id(size_t i) {
  return getToken(testLanguageParser::Id, i);
}


size_t testLanguageParser::Variable_type_declarationContext::getRuleIndex() const {
  return testLanguageParser::RuleVariable_type_declaration;
}

void testLanguageParser::Variable_type_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_type_declaration(this);
}

void testLanguageParser::Variable_type_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<testLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_type_declaration(this);
}

testLanguageParser::Variable_type_declarationContext* testLanguageParser::variable_type_declaration() {
  Variable_type_declarationContext *_localctx = _tracker.createInstance<Variable_type_declarationContext>(_ctx, getState());
  enterRule(_localctx, 20, testLanguageParser::RuleVariable_type_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(testLanguageParser::T__8);
    setState(133);
    match(testLanguageParser::Type);
    setState(134);
    match(testLanguageParser::T__7);
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case testLanguageParser::Type: {
        setState(135);
        variable_type();
        break;
      }

      case testLanguageParser::T__9: {
        setState(136);
        match(testLanguageParser::T__9);
        setState(137);
        match(testLanguageParser::Id);
        setState(138);
        variable_type();
        setState(142); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(139);
          match(testLanguageParser::T__1);
          setState(140);
          match(testLanguageParser::Id);
          setState(141);
          variable_type();
          setState(144); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == testLanguageParser::T__1);
        setState(146);
        match(testLanguageParser::T__10);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(150);
    match(testLanguageParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_type_declarationContext ------------------------------------------------------------------

testLanguageParser::Function_type_declarationContext::Function_type_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* testLanguageParser::Function_type_declarationContext::Type() {
  return getToken(testLanguageParser::Type, 0);
}
